--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "jsx-loader": "^0.13.2",
@@ -32,7 +33,19 @@
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
+    "babel-preset-stage-0": "^6.16.0",
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.9.0",
+    "img-loader": "^1.3.1",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-autobind": "^1.0.6",
+    "react-dom": "^15.4.1",
+    "react-fetch": "0.0.9",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "seamless-immutable": "^6.3.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7"
   }
 }
